c/examples/gcc/testsuite/c-c++-common/cpp/eof-1.c
/* PR preprocess/95183  */

/* { dg-do preprocess } */

#define f(x) x

f( /* { dg-error "-:unterminated" "unterminated macro" } */
